# kiapi_autoware_model

./: README.md
individual_param/kiapi_infrastructure_sensor_kit/: sensor_kit_calibration.yaml
kiapi_infrastructure_sensor_kit_launch/kiapi_infrastructure_sensor_kit_description/: CMakeLists.txt  package.xml
kiapi_infrastructure_sensor_kit_launch/kiapi_infrastructure_sensor_kit_description/urdf/: sensor_kit.xacro  sensors.xacro
kiapi_infrastructure_sensor_kit_launch/kiapi_infrastructure_sensor_kit_launch/: CMakeLists.txt  package.xml
kiapi_infrastructure_sensor_kit_launch/kiapi_infrastructure_sensor_kit_launch/config/: infra_node.param.yaml
kiapi_infrastructure_sensor_kit_launch/kiapi_infrastructure_sensor_kit_launch/include/: infra_node.hpp  visibility_control.h
kiapi_infrastructure_sensor_kit_launch/kiapi_infrastructure_sensor_kit_launch/kiapi_infrastructure_sensor_kit_launch/: infra_sensor.py  pointcloud_sync.py
kiapi_infrastructure_sensor_kit_launch/kiapi_infrastructure_sensor_kit_launch/launch/: gnss.launch.xml  imu.launch.xml  lidar.launch.xml  nebula_node_container.launch.py  pointcloud_preprocessor.launch.py  sensing.launch.xml  single_pointcloud_preprocessor.launch.py
kiapi_infrastructure_sensor_kit_launch/kiapi_infrastructure_sensor_kit_launch/src/: infra_node.cpp
kiapi_sensor_kit_launch/kiapi_sensor_kit_description/: CMakeLists.txt  package.xml
kiapi_sensor_kit_launch/kiapi_sensor_kit_description/urdf/: sensor_kit.xacro  sensors.xacro
kiapi_sensor_kit_launch/kiapi_sensor_kit_launch/: CMakeLists.txt  package.xml
kiapi_sensor_kit_launch/kiapi_sensor_kit_launch/config/: concatenate_and_time_sync_node.param.yaml
kiapi_sensor_kit_launch/kiapi_sensor_kit_launch/launch/: gnss.launch.xml  imu.launch.xml  lidar.launch.xml  nebula_node_container.launch.py  pointcloud_preprocessor.launch.py  sensing.launch.xml
kiapi_sensor_kit_launch/kiapi_sensor_kit_launch/scripts/: vehicle_info_from_sensor.py
kiapi_vehicle_launch/kiapi_vehicle_description/: CMakeLists.txt  package.xml
kiapi_vehicle_launch/kiapi_vehicle_description/urdf/: vehicle.xacro
kiapi_vehicle_launch/kiapi_vehicle_launch/: CMakeLists.txt  package.xml
